# markive

./: Cargo.toml  LICENSE  README.md  components.json  generate-icon.py  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/release-notes/: install-signed.md  install-unsigned.md
.github/workflows/: release.yml
crates/markive-core/: Cargo.toml
crates/markive-core/src/: lib.rs
crates/markive-core/tests/: lifecycle.rs  perf.rs  perf_memory.rs
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  lib.rs  main.rs
src-tauri/tests/: cli.rs
src/lib/: document-state.test.ts  document-state.ts  favorites-state.test.ts  favorites-state.ts  folder-state.test.ts  folder-state.ts  quick-open.test.ts  quick-open.ts  search-state.test.ts  search-state.ts  tab-state.test.ts  tab-state.ts
src/lib/components/: Editor.svelte  Explorer.svelte  ExplorerNode.svelte  FavoritesList.svelte  FavoritesSidebar.svelte  FavoritesTree.svelte  QuickOpen.svelte  SearchPanel.svelte  TabBar.svelte
